--- a/css.scss
+++ b/css.scss
@@ -28,7 +28,10 @@ $cinza:#C7C7C7;
 color: $cinza
 }
 #logo{
-    margin-left: 6vh;
+    margin-left: 7vh;
+}
+#fotinha, #logue{
+    margin-left: 8vh;
 }
 .navbar-toggler, .navbar-toggler-icon{
     background-color: $cinza;
