--- a/css.scss
+++ b/css.scss
@@ -22,7 +22,6 @@ $laranja-instagram:#f09433;
     background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
-      
 }
 #whatsapp{
     @include borda($cor:$verde-whatsapp);
@@ -95,12 +94,12 @@ transition: all 0.5s;
     font-family: $font-poppins-normal;
     font-weight: 500;
     margin-top: 2%;
-    opacity: 0; /* Inicia com a opacidade 0 para ficar invisível */
-    transition: opacity 0.5s ease; /* Adiciona transição para a opacidade */
+    opacity: 0; 
+    transition: opacity 0.5s ease; 
   }
   
   .custom-list li.active p {
-    opacity: 1; /* Torna o texto visível quando está ativo */
+    opacity: 1; 
   }
   
   .custom-list li {
