--- a/css.scss
+++ b/css.scss
@@ -88,6 +88,7 @@ transition: all 0.5s;
     font-family: $fonte-titulo;
     font-size: x-large;
     transition: all 0.5s;
+    cursor: pointer;
   }
   
   .custom-list li p {
