--- a/css.scss
+++ b/css.scss
@@ -8,6 +8,7 @@ $laranja-instagram:#f09433;
 $verde-cactwo:#38453E;
 $fundo-scroll: #262626;
 $scroll-negocio: #8d713f;
+
 @mixin centro(){
   display: flex;
   justify-content: center;
@@ -37,6 +38,7 @@ body::-webkit-scrollbar-thumb {
   border-radius: 12px;
   border: 1px solid $scroll-negocio;
   }
+
 @mixin borda($cor){
     background-color: $cor;
     color: $branco;
@@ -66,7 +68,7 @@ html{
     transition: all 0.5s;
 
     &:hover{
-      color: $cinza;
+      filter: brightness(80%);  
       transition: all 0.5s;
     }
   }
@@ -103,7 +105,6 @@ html{
     transition: all 0.5s ease-in;
     &:hover{
       transition: all 0.5s ease-in;
-
       background-color: $branco;
       color: $preto;
     }
@@ -113,6 +114,13 @@ html{
   padding: 0.1% 0.3% 0.1% 0.3%;
   transition: all 0.5s ease-in;
   color: $preto;
+  &:hover{
+    @include borda($cor:$branco);
+    padding: 0.1% 0.3% 0.1% 0.3%;
+    color: $preto;
+  } 
+
+
 }
 
 *{
@@ -215,7 +223,32 @@ transition: all 0.5s;
 .splide__arrows.splide__arrows--ltr{
   display: none;
 }
-  
-  
 
- 
+  #fundoCacto{
+    background: rgba(0, 0, 0, 0.7) url('https://www.blogson.com.br/wp-content/uploads/2017/06/Sergio-Monte-Verde-204x300.jpg.webp');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: darken;
+    color: $branco;
+    h1, h5{
+      font-family: $fonte-titulo;
+    }
+  }
+ .botao-verde{
+  background-color: $verde-cactwo;
+  color: $branco;
+  transition: all 0.5s;
+  &:hover{
+    transition: all 0.5s;
+    background-color: $verde-cactwo;
+    filter: brightness(90%);  
+  }
+ }
+ svg:hover, #whatsapp:hover, #instagram:hover, #linkedin:hover {
+  transition: all 0.5s;
+  filter: brightness(90%);  
+ }
+ svg{
+  transition: all 0.5s;
+ }
